--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
    /:
-     url: "https://author-p121371-e1189853.adobeaemcloud.com/bin/franklin.delivery/svfranklindemo/pbakliwal-wknd2-05082025-45554/main"
+     url: "https://author-p121371-e1189853.adobeaemcloud.com/bin/franklin.delivery/svfranklindemo/wknd-ref-demo2.0/main"
      type: "markup"
      suffix: ".html"
